Don't attempt to call ourselves yet

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,3 +16,8 @@ repos:
     rev: v8.21.2
     hooks:
     - id: gitleaks
+
+  # - repo: https://github.com/toru173/polyglot
+  #   rev: v0.1
+  #   hooks:
+  #   - id: adjust-line-endings
