--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,5 +2,5 @@
   name: adjust line endings
   description: adjusts line endings in polyglot files such that they have CLRF in the section that has Windows Batch script, and LF elsewhere.
   language: python
-  entry: adjust-line-endings --pre-commit
+  entry: do-pre-commit
   pass_filenames: false
