--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
     hooks:
     - id: gitleaks
 
-  # - repo: https://github.com/toru173/polyglot
-  #   rev: v0.4
-  #   hooks:
-  #   - id: adjust-line-endings
+  - repo: https://github.com/toru173/polyglot
+    rev: v0.4
+    hooks:
+    - id: adjust-line-endings
